# Arilux_AL-LC0X

./: .editorconfig  .gitignore  .travis.yml  Arilux.cpp  Arilux.h  Arilux_AL-LC0X.ino  BasicFilters.cpp  BasicFilters.h  BrightnessFilter.cpp  BrightnessFilter.h  EEPromStore.cpp  EEPromStore.h  Effect.h  FadingFilter.cpp  FadingFilter.h  Filter.h  FlashEffect.cpp  FlashEffect.h  HSB.cpp  HSB.h  MQTTStore.cpp  MQTTStore.h  NoEffect.cpp  NoEffect.h  NoFilter.cpp  NoFilter.h  OptParser.cpp  OptParser.h  PubSubClient.cpp  PubSubClient.h  README.md  RainbowEffect.cpp  RainbowEffect.h  Settings.cpp  Settings.h  StateMachine.h  Store.h  TransitionEffect.cpp  TransitionEffect.h  adafruit.sh  (+10 more)
lib/hsb/: HSB.cpp  hsb.cpp  hsb.h
lib/libLightningUtils/: FadingFilter.h  Filter.h  NoFilter.h  basicfilters.cpp  (+13 more)
libtest/: CMakeLists.txt  main.cpp  platformio.ini  readme.md
libtest/src/: arduinostubs.hpp  test_HSB.hpp  test_colorseffect.hpp  test_optparser.hpp  test_rainbowfilter.hpp  test_settings.hpp  test_statemachine.hpp
libtest/test/libOptParser/: test_OptParser.cpp
libtest/test/libSettings/: test_settings.cpp
libtest/test/libStateMachine/: test_stateMachine.cpp
openhab/: readme.txt
src/: Arilux.cpp  Arilux.h  Arilux_AL-LC0X.ino  BasicFilters.cpp  BasicFilters.h  EEPromStore.cpp  EEPromStore.h  Effect.h  FadingFilter.cpp  FadingFilter.h  Filter.h  FlashEffect.h  HSB.h  MQTTStore.cpp  MQTTStore.h  NoEffect.h  NoFilter.h  OptParser.cpp  PubSubClient.cpp  RainbowEffect.cpp  RainbowEffect.h  Settings.cpp  Settings.h  SettingsDTO.h  TransitionEffect.cpp  TransitionEffect.h  arilux.cpp  arilux.h  config.h  constrain.h  debug.cpp  debug.h  eepromstore.cpp  eepromstore.h  main.cpp  mqttstore.cpp  mqttstore.h  setup.example.h
(+36 files in other folders)
